# Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo/src/catalyst/ChangeLog,v 1.279 2005/06/24 22:09:40 wolf31o2 Exp $

  24 Jun 2005; Chris Gianelloni <wolf31o2@gentoo.org>
  targets/support/bootloader-setup.sh:
  Removed dokeymap from non-Gentoo releases.

  23 Jun 2005; Chris Gianelloni <wolf31o2@gentoo.org>
  targets/support/livecdfs-update.sh:
  Added call to update-pciids to download the latest pci.ids file.

  23 Jun 2005; Eric Edgar <rocket@gentoo.org>
  modules/generic_stage_target.py, modules/livecd_stage1_target.py,
  modules/stage4_target.py:
  Allow changing the location of the pkg_cache in stage4 or livecd-stage1

  22 Jun 2005; Eric Edgar <rocket@gentoo.org> :
  Fix issue where -s on the command line would not run

  22 Jun 2005; Chris Gianelloni <wolf31o2@gentoo.org>
  livecd/files/generic.motd.txt:
  Changed motd to point to /boot/config-* rather than /proc/config(.gz) for
  kernel configurations.

  22 Jun 2005; Chris Gianelloni <wolf31o2@gentoo.org>
  targets/support/livecdfs-update.sh:
  Updated hostname/domainname creation for new baselayout.

  16 Jun 2005; Chris Gianelloni <wolf31o2@gentoo.org>
  targets/support/bootloader-setup.sh, targets/support/create-iso.sh:
  Fixing some bootloader isolinux/boot stuff for x86/amd64.

  14 Jun 2005; Chris Gianelloni <wolf31o2@gentoo.org>
  targets/support/chroot-functions.sh:
  Change portage emerge to use --oneshot --nodeps to keep from merging the
  same packages multiple times.

  14 Jun 2005; Chris Gianelloni <wolf31o2@gentoo.org>
  targets/stage2/stage2-chroot.sh:
  Added a -p bootstrap when catalyst is called with -V (verbose).

  10 Jun 2005; Chris Gianelloni <wolf31o2@gentoo.org>
  targets/support/livecdfs-update.sh:
  Removed inittab hack, as this is done by livecd-tools.

  09 Jun 2005; Chris Gianelloni <wolf31o2@gentoo.org>
  livecd/files/minimal.motd.txt, livecd/files/universal.motd.txt: